--- a/Black-White/Black_White/Black_White.csproj
+++ b/Black-White/Black_White/Black_White.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon.ico" />
+    <Content Include="README.txt" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
