--- a/Black-White/Black_White/Black_White.csproj
+++ b/Black-White/Black_White/Black_White.csproj
@@ -54,10 +54,13 @@
     <Compile Include="Console\ConsoleSuggestion.cs" />
     <Compile Include="Content\GameContent.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StartupProtocol.cs" />
     <Compile Include="TextBack.cs" />
+    <Compile Include="Tile.cs" />
+    <Compile Include="TileConfig.cs" />
     <Compile Include="Window.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -82,7 +85,9 @@
     <None Include="StandardConfig.json" />
     <None Include="Console\ConsoleCMD.json" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Logs\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
